[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/materials/frame_selected.tres" type="Material" id=1]
[ext_resource path="res://assets/materials/wireframe_dark.tres" type="Material" id=2]
[ext_resource path="res://assets/materials/frame_unselected.tres" type="Material" id=3]
[ext_resource path="res://tests/data/shapes/test_shape_wide_flange.tres" type="Resource" id=4]
[ext_resource path="res://assets/scenes/fea/scripts/fea_frame.gd" type="Script" id=5]



[sub_resource type="ArrayMesh" id=1]
surfaces/0 = {
"aabb": AABB( -3, -6, -1, 6, 12, 1.00001 ),
"array_data": PoolByteArray( 0, 0, 64, 192, 0, 0, 160, 64, 0, 0, 0, 0, 0, 0, 64, 192, 0, 0, 192, 64, 0, 0, 0, 0, 0, 0, 64, 64, 0, 0, 192, 64, 0, 0, 0, 0, 0, 0, 64, 64, 0, 0, 160, 64, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 160, 64, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 160, 192, 0, 0, 0, 0, 0, 0, 64, 64, 0, 0, 160, 192, 0, 0, 0, 0, 0, 0, 64, 64, 0, 0, 192, 192, 0, 0, 0, 0, 0, 0, 64, 192, 0, 0, 192, 192, 0, 0, 0, 0, 0, 0, 64, 192, 0, 0, 160, 192, 0, 0, 0, 0, 0, 0, 128, 190, 0, 0, 160, 192, 0, 0, 0, 0, 0, 0, 128, 190, 0, 0, 160, 64, 0, 0, 0, 0, 0, 0, 64, 192, 0, 0, 160, 64, 0, 0, 128, 191, 0, 0, 64, 192, 0, 0, 192, 64, 0, 0, 128, 191, 0, 0, 64, 64, 0, 0, 192, 64, 0, 0, 128, 191, 0, 0, 64, 64, 0, 0, 160, 64, 0, 0, 128, 191, 0, 0, 128, 62, 0, 0, 160, 64, 0, 0, 128, 191, 0, 0, 128, 62, 0, 0, 160, 192, 0, 0, 128, 191, 0, 0, 64, 64, 0, 0, 160, 192, 0, 0, 128, 191, 0, 0, 64, 64, 0, 0, 192, 192, 0, 0, 128, 191, 0, 0, 64, 192, 0, 0, 192, 192, 0, 0, 128, 191, 0, 0, 64, 192, 0, 0, 160, 192, 0, 0, 128, 191, 0, 0, 128, 190, 0, 0, 160, 192, 0, 0, 128, 191, 0, 0, 128, 190, 0, 0, 160, 64, 0, 0, 128, 191 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 1, 0, 2, 0, 2, 0, 3, 0, 3, 0, 4, 0, 4, 0, 5, 0, 5, 0, 6, 0, 6, 0, 7, 0, 7, 0, 8, 0, 8, 0, 9, 0, 9, 0, 10, 0, 10, 0, 11, 0, 11, 0, 0, 0, 12, 0, 13, 0, 13, 0, 14, 0, 14, 0, 15, 0, 15, 0, 16, 0, 16, 0, 17, 0, 17, 0, 18, 0, 18, 0, 19, 0, 19, 0, 20, 0, 20, 0, 21, 0, 21, 0, 22, 0, 22, 0, 23, 0, 23, 0, 12, 0, 1, 0, 13, 0, 2, 0, 14, 0, 3, 0, 15, 0, 4, 0, 16, 0, 5, 0, 17, 0, 6, 0, 18, 0, 7, 0, 19, 0, 8, 0, 20, 0, 9, 0, 21, 0, 10, 0, 22, 0, 11, 0, 23, 0, 0, 0, 12, 0 ),
"blend_shape_data": [  ],
"format": 97537,
"index_count": 72,
"primitive": 1,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="ArrayMesh" id=2]
surfaces/0 = {
"aabb": AABB( 0, 0, -1, 1e-05, 1e-05, 1.00001 ),
"array_data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 128, 191 ),
"array_index_data": PoolByteArray(  ),
"blend_shape_data": [  ],
"format": 97281,
"index_count": 0,
"primitive": 2,
"skeleton_aabb": [  ],
"vertex_count": 2
}

[sub_resource type="BoxShape" id=3]
extents = Vector3( 2.5, 2.5, 0.5 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.1, 0.1, 0.5 )

[node name="FeaFrame" type="Spatial"]
transform = Transform( -1.11027e-09, -0.0179605, -1, 0, 0.0179605, -1, 0.0254, -7.85079e-10, -4.37114e-08, 0, 0, 0 )
script = ExtResource( 5 )
uuid = "FeaFrame"
end_j = Vector3( 1, 1, 0 )
shape = ExtResource( 4 )

[node name="Extrusion" type="CSGPolygon" parent="."]
transform = Transform( 1, -3.55271e-15, 0, -3.55271e-15, 1, 5.31913e-14, -2.77556e-16, 1.71584e-17, 1, 0, 0, 0 )
polygon = PoolVector2Array( -3, 6, 3, 6, 3, 5, 0.25, 5, 0.25, -5, 3, -5, 3, -6, -3, -6, -3, -5, -0.25, -5, -0.25, 5, -3, 5 )
material = ExtResource( 3 )

[node name="Hole" type="CSGPolygon" parent="Extrusion"]
transform = Transform( 1, 1.42109e-14, 4.54747e-13, -3.55271e-15, 1, 1.90735e-06, -1.66533e-16, 1.71584e-17, 1.02, 5.32907e-15, 5.96046e-08, 0.01 )
visible = false
operation = 2
polygon = PoolVector2Array(  )
material = ExtResource( 1 )

[node name="Wireframe" type="MeshInstance" parent="."]
transform = Transform( 1, -3.55271e-15, 0, 0, 1, 5.31913e-14, -2.77556e-16, 1.71584e-17, 1, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 2 )

[node name="Centerline" type="MeshInstance" parent="."]
transform = Transform( 1, -3.55271e-15, 0, 0, 1, 5.31913e-14, -3.33067e-16, 1.71584e-17, 1, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = ExtResource( 3 )

[node name="PickableArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 5.31913e-14, -5.55112e-17, 1.71584e-17, 1, 0, 0, 0 )
collision_layer = 2147483649
collision_mask = 0
__meta__ = {
"_editor_description_": "Large collider on Layer01 for Pickable selections."
}

[node name="CollisionShape" type="CollisionShape" parent="PickableArea"]
transform = Transform( -1, 3.51719e-13, -1.50996e-07, 3.51719e-13, 1, -4.85242e-14, 1.50996e-07, 1.71582e-17, -1, 0, -2.65956e-14, -0.5 )
shape = SubResource( 3 )

[node name="WindowableArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 5.31913e-14, -5.55112e-17, 1.71584e-17, 1, 0, 0, 0 )
visible = false
input_ray_pickable = false
collision_layer = 2147483650
collision_mask = 0
__meta__ = {
"_editor_description_": "Small collider on Layer02 for Windowing selections."
}

[node name="CollisionShape" type="CollisionShape" parent="WindowableArea"]
transform = Transform( -1, 0, 0, 3.51719e-13, 1, -5.31913e-14, 1.50874e-07, 1.71584e-17, -1, 0, -2.65956e-14, -0.5 )
shape = SubResource( 4 )
[connection signal="mouse_entered" from="PickableArea" to="." method="_on_moused_over"]
[connection signal="mouse_exited" from="PickableArea" to="." method="_on_moused_out"]
